# python-project-52

./: .env  .envexample  .gitignore  README.md  db.sqlite3  env  makefile  pyproject.toml  setup.cfg
.github/workflows/: django.yml
MyCustomUser/: apps.py  models.py
MyCustomUser/migrations/: 0001_initial.py
statuses/: urls.py
task_manager/: admin.py  filter.py  filters.py  forms.py  models.py  permissions.py  settings.py  test.py  urls.py  view.py  views.py
task_manager/migrations/: 0001_initial.py  0002_alter_status_name.py  0002_label_labelsoftask_task_label.py  0002_status_created_alter_status_title.py  0003_alter_label_name_alter_task_name.py  0003_alter_status_created.py  0004_customuser.py  0004_task.py  0005_label_alter_task_options_task_labels.py  0005_rename_customuser_user.py  0006_delete_user.py  0006_label_task_alter_task_labels.py  0007_alter_task_executor_alter_task_label.py  0007_remove_label_task_remove_task_labels.py  0008_posrednk_task_labels.py  0008_rename_label_task_labels.py
task_manager/tests/: test.py  (+3 more)
templates/: 404.html  base.html  home.html  label_create.html  label_delete.html  label_list.html  label_update.html  labels.html  labels_create.html  login.html  status_create.html  status_delete.html  status_list.html  status_update.html  statuses.html  task.html  task_create.html  task_delete.html  task_detail.html  task_list.html  task_show.html  task_update.html  test.html  user_create.html  user_delete.html  user_update.html  users.html  users_create.html  users_delete.html  users_update.html
user/: forms.py  urls.py  view.py
(+20 files in other folders)
