[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["chudilo4 <chipalinchik@gmail.com>"]
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8.14"
Django = "^4.1.4"
django-bootstrap4 = "^22.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
flake8 = "^4.0.1"
dj-database-url = "^0.5.0"
django-filter = "^22.1"
rollbar = "^0.16.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
