[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["chudilo4 <chipalinchik@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
python-dotenv = "^0.21.1"
dj-database-url = "^1.2.0"
django-bootstrap4 = "^22.3"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
django-filter = "^22.1"
coverage = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
